--- a/LLNL_2022_Lecture_1.ipynb
+++ b/LLNL_2022_Lecture_1.ipynb
@@ -195,6 +195,11 @@
   },
   {
    "cell_type": "markdown",
+   " 1. A way to describe the energy and properties of eletrons via as a function (functional) of electron density"
+    }
+   },
+  {
+   "cell_type": "markdown",
    "id": "a8739aad",
    "metadata": {
     "slideshow": {
