--- a/LLNL_2022_Lecture_1.ipynb
+++ b/LLNL_2022_Lecture_1.ipynb
@@ -192,13 +192,14 @@
     "- Please write your answer somewhere. \n",
     "- Be ready to discuss it with others or with the class."
    ]
+   "source": [
+    "# Answer\n",
+    "\n",
+    "1. A way to describe the energy and properties of eletrons via as a function (functional) of electron density.\n",
+    "2. The functional is proved to be existing but not known yet.\n",
+   ]
   },
-  {
-   "cell_type": "markdown",
-   "id":"a8739aad",
-   "data": "1. A way to describe the energy and properties of eletrons via as a function (functional) of electron density"
-    }
-   },
+  
   {
    "cell_type": "markdown",
    "id": "a8739aad",
